Dodanie wstępnego skryptu odpowiadającego za pokazywanie hasła w formie ukrytej, ostylowanie dodatkowych elementów

--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
   <title>Gra w wisielca :-)</title>
 
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
 </head>
 
 <body>
   <h1>Gra w wisielca :-)</h1>
-  <h2>Autor: Michał Milanowski</h2>
-  <div id="game-word">Przykładowe słowo</div>
+  <h2>Autor: <a href="https://pl.linkedin.com/in/michalmilanowski">Michał Milanowski</a></h2>
+  <div>
+    <button id="start-game">START!</button>
+  </div>
+  <div id="game-word"></div>
   <div class="container">
     <div id="game-progress">
       <img src="img/s0.jpg" alt="">
     </div>
     <div id="game-keyboard"></div>
   </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
