--- a/index.html
+++ b/index.html
@@ -19,7 +19,53 @@
     <div id="game-progress">
       <img src="img/s0.jpg" alt="">
     </div>
-    <div id="game-keyboard"></div>
+    <div id="game-keyboard">
+      <div class="row">
+        <span class="letter">A</span>
+        <span class="letter">Ą</span>
+        <span class="letter">B</span>
+        <span class="letter">C</span>
+        <span class="letter">Ć</span>
+        <span class="letter">D</span>
+        <span class="letter">E</span>
+      </div>
+      <div class="row">
+        <span class="letter">Ę</span>
+        <span class="letter">F</span>
+        <span class="letter">G</span>
+        <span class="letter">H</span>
+        <span class="letter">I</span>
+        <span class="letter">J</span>
+        <span class="letter">K</span>
+      </div>
+      <div class="row">
+        <span class="letter">L</span>
+        <span class="letter">Ł</span>
+        <span class="letter">M</span>
+        <span class="letter">N</span>
+        <span class="letter">Ń</span>
+        <span class="letter">O</span>
+        <span class="letter">Ó</span>
+      </div>
+      <div class="row">
+        <span class="letter">P</span>
+        <span class="letter">Q</span>
+        <span class="letter">R</span>
+        <span class="letter">S</span>
+        <span class="letter">Ś</span>
+        <span class="letter">T</span>
+        <span class="letter">U</span>
+      </div>
+      <div class="row">
+        <span class="letter">V</span>
+        <span class="letter">W</span>
+        <span class="letter">X</span>
+        <span class="letter">Y</span>
+        <span class="letter">Z</span>
+        <span class="letter">Ż</span>
+        <span class="letter">Ź</span>
+      </div>
+    </div>
   </div>
 
     <script src="script.js"></script>
