Dodanie skryptu rozpoznającego litery

--- a/index.html
+++ b/index.html
@@ -21,49 +21,49 @@
     </div>
     <div id="game-keyboard">
       <div class="row">
-        <span class="letter">A</span>
-        <span class="letter">Ą</span>
-        <span class="letter">B</span>
-        <span class="letter">C</span>
-        <span class="letter">Ć</span>
-        <span class="letter">D</span>
-        <span class="letter">E</span>
+        <span class="letter" onclick="whatLetter('A')">A</span>
+        <span class="letter" onclick="whatLetter('Ą')">Ą</span>
+        <span class="letter" onclick="whatLetter('B')">B</span>
+        <span class="letter" onclick="whatLetter('C')">C</span>
+        <span class="letter" onclick="whatLetter('Ć')">Ć</span>
+        <span class="letter" onclick="whatLetter('D')">D</span>
+        <span class="letter" onclick="whatLetter('E')">E</span>
       </div>
       <div class="row">
-        <span class="letter">Ę</span>
-        <span class="letter">F</span>
-        <span class="letter">G</span>
-        <span class="letter">H</span>
-        <span class="letter">I</span>
-        <span class="letter">J</span>
-        <span class="letter">K</span>
+        <span class="letter" onclick="whatLetter('Ę')">Ę</span>
+        <span class="letter" onclick="whatLetter('F')">F</span>
+        <span class="letter" onclick="whatLetter('G')">G</span>
+        <span class="letter" onclick="whatLetter('H')">H</span>
+        <span class="letter" onclick="whatLetter('I')">I</span>
+        <span class="letter" onclick="whatLetter('J')">J</span>
+        <span class="letter" onclick="whatLetter('K')">K</span>
       </div>
       <div class="row">
-        <span class="letter">L</span>
-        <span class="letter">Ł</span>
-        <span class="letter">M</span>
-        <span class="letter">N</span>
-        <span class="letter">Ń</span>
-        <span class="letter">O</span>
-        <span class="letter">Ó</span>
+        <span class="letter" onclick="whatLetter('L')">L</span>
+        <span class="letter" onclick="whatLetter('Ł')">Ł</span>
+        <span class="letter" onclick="whatLetter('M')">M</span>
+        <span class="letter" onclick="whatLetter('N')">N</span>
+        <span class="letter" onclick="whatLetter('Ń')">Ń</span>
+        <span class="letter" onclick="whatLetter('O')">O</span>
+        <span class="letter" onclick="whatLetter('Ó')">Ó</span>
       </div>
       <div class="row">
-        <span class="letter">P</span>
-        <span class="letter">Q</span>
-        <span class="letter">R</span>
-        <span class="letter">S</span>
-        <span class="letter">Ś</span>
-        <span class="letter">T</span>
-        <span class="letter">U</span>
+        <span class="letter" onclick="whatLetter('P')">P</span>
+        <span class="letter" onclick="whatLetter('Q')">Q</span>
+        <span class="letter" onclick="whatLetter('R')">R</span>
+        <span class="letter" onclick="whatLetter('S')">S</span>
+        <span class="letter" onclick="whatLetter('Ś')">Ś</span>
+        <span class="letter" onclick="whatLetter('T')">T</span>
+        <span class="letter" onclick="whatLetter('U')">U</span>
       </div>
       <div class="row">
-        <span class="letter">V</span>
-        <span class="letter">W</span>
-        <span class="letter">X</span>
-        <span class="letter">Y</span>
-        <span class="letter">Z</span>
-        <span class="letter">Ż</span>
-        <span class="letter">Ź</span>
+        <span class="letter" onclick="whatLetter('V')">V</span>
+        <span class="letter" onclick="whatLetter('W')">W</span>
+        <span class="letter" onclick="whatLetter('X')">X</span>
+        <span class="letter" onclick="whatLetter('Y')">Y</span>
+        <span class="letter" onclick="whatLetter('Z')">Z</span>
+        <span class="letter" onclick="whatLetter('Ż')">Ż</span>
+        <span class="letter" onclick="whatLetter('Ź')">Ź</span>
       </div>
     </div>
   </div>
